kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: recommendation-engine-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend
        image: 977099024018.dkr.ecr.us-east-1.amazonaws.com/frontend-service:latest
        ports:
        - containerPort: 3000
