kubernetes/product-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: recommendation-engine-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product
        image: 977099024018.dkr.ecr.us-east-1.amazonaws.com/product-service:latest
        ports:
        - containerPort: 5001
