kubernetes/recommendation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-service
  namespace: recommendation-engine-qa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendation-service
  template:
    metadata:
      labels:
        app: recommendation-service
    spec:
      containers:
      - name: recommendation
        image: 977099024018.dkr.ecr.us-east-1.amazonaws.com/recommendation-service:0.0.3
        ports:
        - containerPort: 5002
