kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: recommendation-engine-qa
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 80    # external port (Ingress will connect to 80)
      targetPort: 3000  # inside container
  type: ClusterIP
