kubernetes/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: recommendation-engine-qa
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /products
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
