kubernetes/recommendation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  namespace: recommendation-engine-prod
spec:
  selector:
    app: recommendation-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
